<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <!--Strings de uso comum-->
    <string name="app_name">Já Bebi</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tela2">Tela2</string>
    <string name="title_activity_tela3">Tela3</string>
    <string name="title_activity_tela4">Tela4</string>
    <string name="title_activity_tela_ajuda">TelaAjuda</string>
    <string name="btnHOME">Home</string>
    <string name="btnADD">Add</string>
    <string name="btnSEARCH">Search</string>
	<string name="btnBACK">Back</string>
	<string name="img">Glass picture</string>
	<string name="facebook_app_id"></string>
    
    <!--Strings referentes a tela inicial(MainActivity)-->
    <string name="txtHOME1">Welcome to the app</string>
    <string name="txtHOME2">Já Bebi</string>
    <string name="txtHOME3">Your latest acquisition was</string>
    <string name="txtHOME4">You currently own</string>
    <string name="txtHOME5">No acquisitions yet</string>
    <string name="txtHOME6">items</string>
    <string name="btnHELP">Help</string>
    
    <!--Strings referentes a tela adicionar e editar/excluir(Tela2 e Tela4)-->
    <string name="txtITEM">Item</string>
    <string name="hintITEM">Beer name</string>
    <string name="txtPRICE">Price</string>
    <string name="hintPRICE">Beer price</string>
    <string name="txtDATE">Date</string>
    <string name="hintDATE">Pick a date</string>
    <string name="btnSAVE">Save</string>
    <string name="btnCANCEL">Cancel</string>
    <string name="btnCONFIRM">Confirm</string>
    <string name="btnEXCLUIR">Delete</string>
    <string name="btnEDITAR">Edit</string>
    <string name="Success">Registred Successfully</string>
    <string name="Fail">Registration Fail</string>
    <string name="Success2">Edited Successfully</string>
    <string name="Fail2">Editation Fail</string>
    <string name="Success3">Deleted Successfully</string>
    <string name="Fail3">Deletation Fail</string>
    <string name="txtRATE">Rate</string>
    <string name="txtPHOTO">Camera</string>
    <string name="alertYES">Yes</string>
    <string name="alertNo">No</string>
    <string name="alertTITLE">Delete sample</string>
    <string name="alertMSG">Are you sure you want to delete this sample?</string>
    <string name="infoSEARCH">Pick an item to edit or remove it</string>
    <string name="alertEMPTY">It\'s not possible to register without the name and the price!</string>
	
    <!--Strings referentes a tela de ajuda(TelaAjuda)-->
    <string name="txtHELP0">ABOUT</string>
    <string name="txtHELP1">Application designed to help organize collections of beers, 
        avoiding the purchase of repeated samples.</string>
    <string name="txtHELP2">HELP</string>
    <string name="txtHELP3">The home screen shows the latest addition to the collection 
        and the total amount of items.</string>
    <string name="txtHELP4">To add a new sample just enter the information in the Add 
        screen, to edit or delete a sample simply select one from the list in the Search 
        screen.</string>
	<string name="txtHELP5">Please send comments and suggestions to rodrigotmcaldas@comp.ufla.br</string>
	<string name="easterEgg">Find the hidden feature in this screen and have fun!</string>
	
	<!--Strings referentes a tela de busca(Tela3)-->
	<string name="txtMSG">No sample registered yet.</string>
	<string name="btnNOME">Name</string>
	<string name="btnPRECO">Price</string>
	<string name="btnDATA">Date</string>
	
</resources>