<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ufla.JaBebi.Buscar" >

    <TableRow
        android:id="@+id/row1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:padding="5dp"
        android:background="@color/gray" >

        <Button 
	        android:id="@+id/btnHome"
	        android:layout_width="95dp"
	        android:layout_height="wrap_content"
	        android:text="@string/btnHOME"
	        style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/btnADD"
            style="?android:attr/buttonBarButtonStyle"/>
        
        <Button
            android:id="@+id/btnSearch"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/btnSEARCH"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/holo_blue_light"/>
        
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:src="@drawable/ic_launcher" 
            android:contentDescription="@string/img"/>

    </TableRow>
    
    
    <TableRow 
        android:id="@+id/row2"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_below="@+id/row1"
        android:background="@color/blue" >
        
        <TextView 
        android:id="@+id/listViewListar"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="Listar coleção: "/>
        
        <Button
            android:id="@+id/btnNOME"
            android:layout_width="65dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:text="@string/btnNOME"
            android:enabled="false"
            style="?android:attr/buttonBarButtonStyle"/>
        
        <Button
            android:id="@+id/btnPRECO"
            android:layout_width="65dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:text="@string/btnPRECO"
            android:enabled="false"
            style="?android:attr/buttonBarButtonStyle"/>
        
        <Button
            android:id="@+id/btnDATA"
            android:layout_width="65dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:text="@string/btnDATA"
            android:enabled="false"
            style="?android:attr/buttonBarButtonStyle"/>
        
    </TableRow>
    
    <TextView 
        android:id="@+id/listViewInfo"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_below="@+id/row2"
        android:layout_marginTop="15dp"
        android:text="@string/infoSEARCH"/>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listViewInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" >
    </ListView>

</RelativeLayout>
