<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ufla.trabfinal.Inicio" >

    <TableRow
        android:id="@+id/row1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:padding="5dp"
        android:background="#DCDCDC" >

        <Button
            android:id="@+id/btnHome"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/btnHOME"
            android:textColor="@android:color/holo_blue_light" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/btnADD" 
            style="?android:attr/buttonBarButtonStyle"/>
        
        <Button
            android:id="@+id/btnSearch"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/btnSEARCH" 
            style="?android:attr/buttonBarButtonStyle"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:src="@drawable/ic_launcher" />

    </TableRow>
    
    <TableRow
        android:id="@+id/row2"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="right"
        android:layout_below="@+id/row1">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:contentDescription="@string/btnHELP"
            android:src="@android:drawable/ic_menu_help" />
        
    </TableRow>
    
    <TableRow
        android:id="@+id/row3"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/row2">

        <TextView
            android:id="@+id/textViewFala"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text= "@string/txtHOME1"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </TableRow>
    
    <TableRow
        android:id="@+id/row4"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_below="@+id/row3">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="15dp"
            android:text= "@string/txtHOME2"
            android:textSize="40sp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" 
            android:contentDescription="@string/img"/>
        
    </TableRow>
    
    <TableRow
        android:id="@+id/row5"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/row4">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text= "@string/txtHOME3"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </TableRow>
    
    <TableRow
        android:id="@+id/row6"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/row5">

        <TextView
            android:id="@+id/variavel1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textStyle="bold|italic"
            android:text= "@string/txtHOME5"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </TableRow>
    
    <TableRow
        android:id="@+id/row7"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/row6">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text= "@string/txtHOME4"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </TableRow>
    
    <TableRow
        android:id="@+id/row8"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/row7">

        <TextView
            android:id="@+id/variavel2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textStyle="bold|italic"
            android:text= "@string/txtHOME6"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </TableRow>

</RelativeLayout>
