<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ufla.JaBebi.Adicionar" >

    <TableRow
        android:id="@+id/row1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:padding="5dp"
        android:background="@color/gray">

        <Button 
	        android:id="@+id/btnHome"
	        android:layout_width="95dp"
	        android:layout_height="wrap_content"
	        android:text="@string/btnHOME"
	        style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/btnADD" 
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/holo_blue_light" />
        
        <Button
            android:id="@+id/btnSearch"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/btnSEARCH" 
            style="?android:attr/buttonBarButtonStyle"/>
        
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:src="@drawable/ic_launcher" />

    </TableRow>
    
    <TableRow 
        android:id="@+id/rowFace"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/row1"
        android:background="@color/blue" >
        
        <TextView 
            android:id="@+id/textViewFace"
            android:layout_width="wrap_content"
        	android:layout_height="fill_parent"
        	android:gravity="center"
        	android:textSize="12sp"
        	android:textAppearance="?android:attr/textAppearanceLarge"
        	android:text="Esteja logado para publicar no facebook"/>
        
        <Button
            android:id="@+id/btnFace"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Logar" />
        
    </TableRow>
    
    <TableRow
        android:id="@+id/row2"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/rowFace">
        
        
        <TextView 
            android:id="@+id/textView1"
            android:layout_width="70dp"
        	android:layout_height="fill_parent"
        	android:textAppearance="?android:attr/textAppearanceLarge"
        	android:text="@string/txtITEM"/>
        
        <EditText 
            android:id="@+id/fieldITEM"
            android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:hint="@string/hintITEM"
        	android:ems="12"
	        android:maxLines="1"
	    	android:lines="1"
	    	android:inputType="textImeMultiLine"
	    	android:imeOptions="actionNext" />
        
    </TableRow>
    
    <TableRow 
        android:id="@+id/row3"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/row2">
        
        <TextView 
            android:id="@+id/textView2"
            android:layout_width="70dp"
        	android:layout_height="fill_parent"
        	android:textAppearance="?android:attr/textAppearanceLarge"
        	android:text="@string/txtPRICE"/>
        
        <EditText 
            android:id="@+id/fieldVALOR"
            android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:hint="@string/hintPRICE"
        	android:ems="12"
	    	android:inputType="numberDecimal"/>
        
    </TableRow>
    
    <TableRow 
        android:id="@+id/row4"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/row3">
        
        <TextView 
            android:id="@+id/textView3"
            android:layout_width="70dp"
        	android:layout_height="fill_parent"
        	android:textAppearance="?android:attr/textAppearanceLarge"
        	android:text="@string/txtDATE"/>
        
        <EditText 
            android:id="@+id/fieldDATA"
            android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:hint="@string/hintDATE"
        	android:focusable="false"
        	android:ems="12"
	    	android:inputType="date"/>
        
    </TableRow>
    
    <TableRow 
        android:id="@+id/row5"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/row4">
        
        <TextView 
            android:id="@+id/textView4"
            android:layout_width="60dp"
        	android:layout_height="fill_parent"
        	android:textAppearance="?android:attr/textAppearanceLarge"
        	android:text="@string/txtRATE"/>

        <RatingBar
            android:id="@+id/ratingBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
    </TableRow>
    
    <TableRow 
        android:id="@+id/row6"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/row5">
        
        <Button 
            android:id="@+id/btnCAMERA"
	        android:layout_width="100dp"
	        android:layout_height="50dp"
	        android:text="@string/txtPHOTO"/>

        <ImageView
            android:id="@+id/imageViewAdicionar"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="60dp"
            android:src="@drawable/ic_launcher" />
        
	</TableRow>
    
    <TableRow 
        android:id="@+id/row7"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true">
        
        <Button 
            android:id="@+id/btnCANCEL"
	        android:layout_width="100dp"
	        android:layout_height="fill_parent"
	        android:text="@string/btnCANCEL"/>
        
        <Button 
            android:id="@+id/btnSAVE"
	        android:layout_width="100dp"
	        android:layout_height="fill_parent"
	        android:text="@string/btnSAVE"
	        android:layout_marginLeft="5dp"/>
        
        <Button 
            android:id="@+id/btnSAVEface"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:text="Save e Share"
	        android:visibility="gone"
	        android:layout_marginLeft="5dp"/>
        
    </TableRow>
    
    
</RelativeLayout>
