<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ufla.JaBebi.Ajuda" >
    
    <TableRow
        android:id="@+id/row0"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:gravity="center">

        <TextView
            android:id="@+id/textViewAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtHELP0"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </TableRow>
    
    <TableRow
        android:id="@+id/row1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row0"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtHELP1"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </TableRow>
    
    <TableRow
        android:id="@+id/row2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/row1"
        android:gravity="center">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtHELP2"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </TableRow>
    
    <TableRow
        android:id="@+id/row3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/row2"
        android:gravity="center">

        <TextView
            android:id="@+id/textViewHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtHELP3"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </TableRow>
    
    <TableRow
        android:id="@+id/row4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/row3"
        android:gravity="center">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtHELP4"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </TableRow>
    
    <TableRow
        android:id="@+id/row5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/row4"
        android:gravity="center">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtHELP5"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </TableRow>
    
    <TableRow
        android:id="@+id/row6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="right">

        <Button 
            android:id="@+id/btnVOLTAR"
        	android:layout_width="wrap_content"
        	android:layout_height="50dp"
        	android:text="@string/btnBACK"
        	/>
        
    </TableRow>

</RelativeLayout>
